recipes/recipes-style.css
body{
  text-align: center;
  background-color: rgb(242, 252, 255);
  font-family: 'Courier New', Courier, monospace;
  padding: 20px;
  
}
img {
  height: 300px;
  width: 300px;
  object-fit: cover;
  object-position: 59% 50%;
}
.description{
  background-color: rgb(255, 217, 223);
  text-align: justify;
}
ul{
  list-style: none;
  padding: 0;
  margin: 0;
}
ol{
  text-align: justify;
}
a:visited{
  color: rgb(238, 171, 181);
}
a:link{
  color: rgb(238, 171, 181);
}
a:hover{
  color: rgb(220, 162, 191);
}

@media (max-width: 480px) {
  body {
    margin: 10px;
    
  }
  img {
    height: 270px;
    width: 100%;
    object-fit: cover;
    object-position: 59% 50%;
  }
  ul{
    list-style: none;
    padding: 0;
    margin: 0;
  }
  ol{
    text-align: justify;
  }
}

